[package]
name = "rjs"
version = "0.1.0"
edition = "2018"
authors = ["Jihyun Yu <yjh0502@gmail.com>"]

[lib]
crate-type = ["dylib"]

[dependencies]
rustler = "0.23"
rustler_sys = "2.1"
serde = "1"
serde_json = "1"

[profile.dev]
opt-level = 3
debug = false
lto = true
debug-assertions = true
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[replace]
"rustler_sys:2.1.0" = { git = "https://github.com/filmor/rustler.git", branch = "otp24" }
