[package]
name = "rjs"
version = "0.1.0"
edition = "2018"
authors = ["Jihyun Yu <yjh0502@gmail.com>"]

[lib]
crate-type = ["dylib"]

[dependencies]
rustler = { version = "0.29.0", default_features = false, features = ["derive", "nif_version_2_14" ] }
serde = "1.0.133"
serde_json = "1.0.75"

[profile.dev]
opt-level = 3
debug = false
lto = true
debug-assertions = true
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
